--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,11 @@
   @apply !outline-none w-8 h-8;
 
   &.active {
-    @apply bg-gray-100 rounded;
+    @apply bg-gray-500/50 rounded;
   }
 
   &:hover {
-    @apply bg-gray-100 rounded;
+    @apply bg-gray-400/50 rounded;
   }
 }
 
